# stock_info_transfer

./: .gitignore  .python-version  check_csv.bat  csv_checker.py  logout.py  pyproject.toml  requirements.txt  settings.ini  start.bat  stock_info_transfer.py  テストデータ  作成時メモ.md
.github/ISSUE_TEMPLATE/: task.md
TestDriver/: asos_test.py  csvtest.py  inputbuyma.py  stock_info_get.py
TestDriver/TestData/: testdata.csv
config/: config.yaml
csvparse/: __init__.py  csvparse.py
input_data/: input_csv.csv
itemscraping/: __init__.py  asos.py  buyma.py  itembuyinfo.py  scriptcomp.py  siteaccess.py  sitesmeta.py
models/: __init__.py  buymaitem.py  csvmodel.py  existence.py  itemmeta.py
output_data/: stock_nothing_item.csv
src/: inventory.py
src/controller/: inventory_manager.py
src/exception/: exceptions.py
src/scrape/: asos_scraper.py  base_scraper.py  buyma_scraper.py  dress_scraper.py  end_scraper.py  farfetch_scraper.py  mrporter_scraper.py
src/setting/: settings.py
src/utils/: calc_date.py  csv.py  csv_reader.py
util/: exception.py
