[tool.poetry]
name = "stock_info_transfer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.1"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
pandas = "^1.2.0"
dill = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
